# MathematicsAndAlgorithms

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  README.md  complex.cpp  complex.h  in.txt  input.txt  libraries.cpp  main.cpp  out.txt  output.txt
.zed/: tasks.json
01_mathematics/fundamentals/binary_exponentiation/applications/: 01_binpow_modulo.cpp  (+2 more)
02_data_structure/minimum_stack_queue/: find_minimum_subarray_fixed_length.cpp  queue_modification.cpp  stack_modification.cpp
algebra/fundamentals/binary_exponentiation/: theory.cpp
algorithms/binary_ternary/: A.cpp  B.cpp
algorithms/divide_and_conquer/: min_max  min_max.cpp
algorithms/graph/: A.cpp
algorithms/map/: A.cpp  B.cpp  C.cpp  D.cpp  E.cpp  F.cpp  G.cpp  H.cpp
algorithms/prefix_sum/: A.cpp  B.cpp  C.cpp
algorithms/prime/: A.cpp  B.cpp  C.cpp  D.cpp  E.cpp
algorithms/queue/: A.cpp  B.cpp  C.cpp  D.cpp  E.cpp
algorithms/recursion/: A.cpp  B.cpp
algorithms/rmq/: A.cpp
algorithms/set/: A.cpp  B.cpp  C.cpp  D.cpp  E.cpp  F.cpp  G.cpp
algorithms/stack/: A.cpp  B.cpp  C.cpp  D.cpp  E.cpp  F.cpp
bits/: macros.h
chapter_01/: sample_solution_01.cpp  sample_solution_02.cpp  sample_solution_03.cpp
data_abstraction/abstraction/: Complex.cpp  Complex.h
data_abstraction/class/: Complex.cpp  Complex.h
data_abstraction/template/: Template.cpp  Template.h
data_structure/: array.cpp  array.h  vector.cpp  vector.h
data_structure/fundamentals/minimum_stack_queue/: find_minimum_subarray_fixed_length.cpp  stack_modification.cpp
data_structure/graph/: bipartite_graph.cpp  cycle_directed.cpp  cycle_undirected.cpp  find_path  find_path.cpp  ford.cpp  kruskal.cpp  matrix.cpp  matrix_path  matrix_path.cpp  mst.cpp  prim_queue.cpp  prime.cpp  prime_priority.cpp  strong_connected_component.cpp  topo_sort  topo_sort.cpp
data_structure/linked_list/: linked_list.cpp
data_structure/math/: matrix.cpp
data_structure/queue/: deque  deque.cpp
data_structure/stack/: stack  stack.cpp
data_structure/tree/: avl_tree.cpp  binary_tree.cpp  btree.cpp  red_black_tree.cpp  segment_tree.cpp  trie.cpp
data_struture/: array.cpp
linear_algebra/: matrix.cpp
(+13 files in other folders)
